[project]
name = "arko-reloader"
version = "0.1.0"
description = ""
authors = [
    {name = "Karako", email = "karakohear@gmail.com"},
]
dependencies = [
    "typing-extensions>=4.5.0",
    "watchfiles>=0.18.1",
    "psutil>=5.9.5",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"
